<resources>
    <string name="app_name">Sportier</string>
    <string name="arabicLanguage">عربي</string>
    <string name="englishLanguage">English</string>
    <string name="ADS">ADS</string>
    <string name="categories">Categories</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="special">special</string>
    <string name="offers">Offers</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoriesName">category Name</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="kids">KIDS</string>
    <string name="sports">SPORTS</string>
    <string name="personalADS">PERSONAL ADS</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="ForgetPassword">Forget your Password ?</string>
    <string name="login">Login</string>
    <string name="newAccont">You don\'t have Accont?</string>
    <string name="register">REGISTER NOW</string>
    <string name="email">Email *</string>
    <string name="mobileReg">Mobile *</string>
    <string name="passwordReg">password *</string>
    <string name="agree">I Agree for</string>
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="registerNew">REGISTER</string>
    <string name="total">TOTAL</string>
    <string name="continueShopping">CONTINUE SHOPPING</string>
    <string name="checkout">CHECKOUT</string>
    <string name="commercialADS">COMMERCIAL ADS</string>
    <string name="select">SELECT</string>
    <string name="addNewAddress">ADD NEW ADDRESS</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="language">عربي</string>
    <string name="shoppingCart">SHOPPING CART</string>
    <string name="comment">Comment *</string>
    <string name="name">Name *</string>
    <string name="send">SEND</string>
    <string name="notification">Notification</string>
    <string name="addressName">Address Name</string>
    <string name="governate">Governate</string>
    <string name="City">City</string>
    <string name="Area">Area</string>
    <string name="street">Street *</string>
    <string name="jade">Jada/Avenue</string>
    <string name="house">House/Buliding *</string>
    <string name="addressDetails">Address in details</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="myFav">MY FAVORITES</string>
    <string name="myOrder">MY ORDERS</string>
    <string name="myAddresses">MY ADDRESSES</string>
    <string name="logout">LOGOUT</string>
    <string name="myADS">MY ADS</string>
    <string name="addAD">ADD AD</string>
    <string name="myAccount">MY ACCOUNT</string>
    <string name="SelectCategory">Select Category and Sub Category</string>
    <string name="SelectCity">Select City and Area</string>
    <string name="adTitle">Ad Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="packages">Packages</string>
    <string name="about">ABOUT US</string>
    <string name="home">Home</string>
    <string name="changeCountry">Change Country</string>
    <string name="contactUs">Contact Us</string>
    <string name="aboutUs">About Us</string>
    <string name="myAccountMenu">My Account</string>
    <string name="FAQ">FAQ</string>


</resources>
