<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:orientation="vertical"
    tools:context="com.example.duaa.sportier.Fragment.RegisterFragment"
    tools:ignore="RtlCompat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.duaa.sportier.view.FontEditTextViewRegular
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@mipmap/input"
            android:gravity="start|center"
            android:hint="@string/email"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@mipmap/input"

            >

            <com.example.duaa.sportier.view.FontTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="+965"
                android:textColor="@color/red"
                android:textSize="15sp" />

            <com.example.duaa.sportier.view.FontTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="|"
                android:textSize="15sp"

                />

            <com.example.duaa.sportier.view.FontEditTextViewRegular
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/input"
                android:gravity="start|center"
                android:hint="@string/mobileReg"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textSize="14sp"


                />

        </LinearLayout>


        <com.example.duaa.sportier.view.FontEditTextViewRegular
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@mipmap/input"
            android:gravity="start|center"
            android:hint="@string/passwordReg"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:textSize="15sp"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/checked" />

            <com.example.duaa.sportier.view.FontTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/agree"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.example.duaa.sportier.view.FontTextViewRegular
                android:id="@+id/termsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termsAndConditions"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.example.duaa.sportier.view.FontButtonRegular
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="25dp"
            android:background="@mipmap/btn01_red"
            android:text="@string/registerNew"
            android:textColor="@color/white"
            android:textSize="15sp"

            />

    </LinearLayout>
</ScrollView >
